<resources>
    <string name="app_name">LessonWork</string>
    <string name="clickCount">Counter %d</string>
    <string name="ClickNum">ClickNum</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="slesh">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="div">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="clean">CE</string>
    <string name="_0">0</string>
    <string name="resalt">=</string>
    <string name="plus">+</string>
    <string name="Error1">Вы ввели не корректный символ</string>
</resources>